# Transmotion

./: README.md
be/: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  server.py
be/app/: __init__.py
be/app/config/: environment.py  extensions.py  utilities.py
be/app/features/trainer/: fine_tuning_mbert_xlmr.ipynb  fine_tuning_mbert_xlmr_2.ipynb  transmotion_trainer.ipynb  transmotion_trainer_v2.ipynb
be/app/layers/controllers/: auth_controller.py  colab_controller.py  dataset_controller.py  model_controller.py  social_auth_controller.py  training_job_controller.py  user_controller.py
be/app/layers/middlewares/: auth_middleware.py
be/app/layers/models/: dataset.py  prediction.py  preprocessed_row.py  trained_model.py  training_job.py  user.py
be/app/layers/routes/: __init__.py  auth_route.py  dataset_route.py  model_route.py  social_auth_route.py  sse_route.py  training_job_route.py  user_route.py
be/app/lib/: cloudinary.py
be/app/utils/: exceptions.py  logger.py  password.py  response.py
be/migrations/versions/: 06f206d8ca58_new_database_tables.py  4b50a567d927_dataset_prediction_model_training.py  c10b8978d575_initial_migration.py  d9c7a42417ce_add_evaluation_fields_to_training_job_.py  fb39711141f3_new_database.py
be/public/: index.html
be/scripts/dataset/: add_text_label.py  analyze_data.py  balance_dataset.py  excel_to_csv.py  harvestscrape.sh  merge_dataset.py  merge_scrape.py  preprocess_dataset.py  preprocess_scrape.py  scrape.py  twscrape.py
be/scripts/db/: create_admin.py  reset_db.py  seed.py
(+212 files in other folders)
